--- a/package.json
+++ b/package.json
@@ -10,20 +10,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "next": "15.3.1",
-    "tailwindcss": "^3.3.5",
-    "postcss": "^8.4.31",
-    "autoprefixer": "^10.4.16"
+    "tailwindcss": "3.3.5",
+    "postcss": "8.4.31",
+    "autoprefixer": "10.4.16"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
+    "typescript": "5.0.4",
+    "@types/node": "20.10.5",
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.0",
+    "eslint": "9.0.0",
     "eslint-config-next": "15.3.1",
-    "@eslint/eslintrc": "^3"
+    "@eslint/eslintrc": "3.0.0"
   }
 }
